--- a/Fall2021.md
+++ b/Fall2021.md
@@ -1,8 +1,8 @@
 Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
-13-Sep   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                           |  Zoom
-20-Sep   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                          |  Zoom
+13-Sep   | Angelica Peña                                              |  TBA                                                                                           |  Zoom
+20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
 27-Sep   | <!--Speaker  here -->                                             |  <!--Title here-->                                                                                            |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
