--- a/Fall2021.md
+++ b/Fall2021.md
@@ -1,13 +1,13 @@
-Date  |  Speaker                                            |  Title                                                                                                |  Room
+	Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
-13-Sep   | Angelica Peña                                              |  TBA                                                                                           |  Zoom
+13-Sep   | <!--Speaker  here -->                                              |  New Student Carnival                                                                                           |  Zoom
 20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
 27-Sep   | <!--Speaker  here -->                                             |  <!--Title here-->                                                                                            |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
-18-Oct   |  <!--Speaker  here -->                                            |  <!--Title here-->                                                                                           |  Zoom
-25-Oct   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                            |  Zoom
+18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
+25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom
 1-Nov   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                           |  Zoom
 8-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
 15-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
