--- a/Fall2021.md
+++ b/Fall2021.md
@@ -1,7 +1,7 @@
 	Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
-13-Sep   | <!--Speaker  here -->                                              |  New Student Carnival                                                                                           |  Zoom
+13-Sep   | Everyone! (new student = Jose Valenti Muelas)                                              |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
 20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
 27-Sep   | <!--Speaker  here -->                                             |  <!--Title here-->                                                                                            |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
