--- a/Fall2021.md
+++ b/Fall2021.md
@@ -3,7 +3,7 @@
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
 13-Sep   | Everyone! (new student = Jose Valenti Muelas)                                              |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
 20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
-27-Sep   | <!--Speaker  here -->                                             |  <!--Title here-->                                                                                            |  Zoom
+27-Sep   | Raisha Lovindeer                                           |  TBA                                                                                           |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
 18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
