--- a/Fall2021.md
+++ b/Fall2021.md
@@ -1,7 +1,7 @@
-	Date  |  Speaker                                            |  Title                                                                                                |  Room
+Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
-13-Sep   | Everyone! (new student = Jose Valenti Muelas)                                              |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
+13-Sep   | Everyone!                                             |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
 20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
 27-Sep   | Raisha Lovindeer                                           |  TBA                                                                                           |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
@@ -10,8 +10,8 @@
 25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom
 1-Nov   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                           |  Zoom
 8-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
-15-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
-22-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
+15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom
+22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
 29-Nov   |  <!--Speaker  here -->                                            |  <!--Title here-->                                                                                            |  Zoom
 6-Dec   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
 13-Dec   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
