--- a/Fall2021.md
+++ b/Fall2021.md
@@ -8,7 +8,7 @@ Date  |  Speaker                                            |  Title            
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
 18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
 25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom
-1-Nov   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                           |  Zoom
+1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom
 8-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
 15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
