--- a/Fall2021.md
+++ b/Fall2021.md
@@ -14,5 +14,5 @@ Date  |  Speaker                                            |  Title            
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
 29-Nov   |  <!--Speaker  here -->                                            |  <!--Title here-->                                                                                            |  Zoom
 6-Dec   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
-13-Dec   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
+13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom
 20-Dec   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
