--- a/Fall2021.md
+++ b/Fall2021.md
@@ -2,7 +2,7 @@ Date  |  Speaker                                            |  Title            
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
 13-Sep   | Everyone!                                             |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
-20-Sep   | Patrick Duke                                              |  TBA                                                                                          |  Zoom
+20-Sep   | <!--Speaker  here -->                                               |  <!--Title here-->                                                                                          |  Zoom
 27-Sep   | Raisha Lovindeer                                           |  TBA                                                                                           |  Zoom
 4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
@@ -12,7 +12,7 @@ Date  |  Speaker                                            |  Title            
 8-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
 15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
-29-Nov   |  <!--Speaker  here -->                                            |  <!--Title here-->                                                                                            |  Zoom
-6-Dec   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
+29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom
+6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom
 13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom
 20-Dec   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
