--- a/Fall2021.md
+++ b/Fall2021.md
@@ -2,14 +2,14 @@ Date  |  Speaker                                            |  Title            
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
 13-Sep   | Everyone!                                             |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
-20-Sep   | <!--Speaker  here -->                                               |  <!--Title here-->                                                                                          |  Zoom
+20-Sep   | N/A                                               |  No Seminar Today!                                                                                          |  Zoom
 27-Sep   | Raisha Lovindeer                                           |  TBA                                                                                           |  Zoom
-4-Oct   | <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
+4-Oct   | Patrick Pata                                              |  TBA                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
 18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
 25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom
 1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom
-8-Nov   |  <!--Speaker  here -->                                             |  <!--Title here-->                                                                                           |  Zoom
+8-Nov   |  Jérémie Bonneau                                             |  TBA                                                                                           |  Zoom
 15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
 29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom
