--- a/Fall2021.md
+++ b/Fall2021.md
@@ -3,7 +3,7 @@ Date  |  Speaker                                            |  Title            
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
 13-Sep   | Everyone!                                             |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
 20-Sep   | N/A                                               |  No Seminar Today!                                                                                          |  Zoom
-27-Sep   | Raisha Lovindeer                                           |  TBA                                                                                           |  Zoom
+27-Sep   | Raisha Lovindeer                                           |  Modeling ocean colour niche selection by cyanobacteria                                                                                           |  Zoom
 4-Oct   | Patrick Pata                                              |  TBA                                                                                            |  Zoom
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
 18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
@@ -15,4 +15,3 @@ Date  |  Speaker                                            |  Title            
 29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom
 6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom
 13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom
-20-Dec   |  <!--Speaker  here -->                                              |  <!--Title here-->                                                                                            |  Zoom
