--- a/Fall2021.md
+++ b/Fall2021.md
@@ -3,15 +3,15 @@ Date  |  Speaker                                            |  Title            
 6-Sep   |  N/A                                             |  Labour Day!                                                                                            |  Zoom?
 13-Sep   | Everyone!                                             |  Research Speed Dating + New Student Introduction                                                                                          |  Zoom
 20-Sep   | N/A                                               |  No Seminar Today!                                                                                          |  Zoom
-27-Sep   | Raisha Lovindeer                                           |  Modeling ocean colour niche selection by cyanobacteria                                                                                           |  Zoom
-4-Oct   | Patrick Pata                                              |  TBA                                                                                            |  Zoom
-11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom
-18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom
-25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom
-1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom
-8-Nov   |  Jérémie Bonneau                                             |  TBA                                                                                           |  Zoom
-15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom
-22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom
-29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom
-6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom
-13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom
+27-Sep   | Raisha Lovindeer                                           |  Modeling ocean colour niche selection by cyanobacteria                                                                                           |  Zoom + ESB 5104
+4-Oct   | Patrick Pata                                              |   Persistence of biogeographic regions across 20-years of zooplankton community observations in the British Columbia coastal ocean                                                                                            |  Zoom + ESB 5104
+11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom + ESB 5104
+18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom + ESB 5104
+25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom + ESB 5104
+1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom + ESB 5104
+8-Nov   |  Jérémie Bonneau                                             |  TBA                                                                                           |  Zoom + ESB 5104
+15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom + ESB 5104
+22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom + ESB 5104
+29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom + ESB 5104
+6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom + ESB 5104
+13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom + ESB 5104
