--- a/Fall2021.md
+++ b/Fall2021.md
@@ -6,8 +6,8 @@ Date  |  Speaker                                            |  Title            
 27-Sep   | Raisha Lovindeer                                           |  Modeling ocean colour niche selection by cyanobacteria                                                                                           |  Zoom + ESB 5104
 4-Oct   | Patrick Pata                                              |   Persistence of biogeographic regions across 20-years of zooplankton community observations in the British Columbia coastal ocean                                                                                            |  Zoom + ESB 5104
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom + ESB 5104
-18-Oct   |  Connor Henderson                                           |  TBA                                                                                          |  Zoom + ESB 5104
-25-Oct   |  Angelica Peña                                            |  TBA                                                                                           |  Zoom + ESB 5104
+18-Oct   |  N/A                                           |  No Seminar Today!                                                                                          |  Zoom + ESB 5104
+25-Oct   |  Angelica Peña                                            |  Modelling the interannual variability of biogeochemical conditions along the British Columbia coast                                                                                          |  Zoom + ESB 5104
 1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom + ESB 5104
 8-Nov   |  Jérémie Bonneau                                             |  TBA                                                                                           |  Zoom + ESB 5104
 15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom + ESB 5104
