--- a/Fall2021.md
+++ b/Fall2021.md
@@ -8,8 +8,8 @@ Date  |  Speaker                                            |  Title            
 11-Oct   |  N/A                                              |  Thanksgiving!                                                                                           |  Zoom + ESB 5104
 18-Oct   |  N/A                                           |  No Seminar Today!                                                                                          |  Zoom + ESB 5104
 25-Oct   |  Angelica Peña                                            |  Modelling the interannual variability of biogeochemical conditions along the British Columbia coast                                                                                          |  Zoom + ESB 5104
-1-Nov   |  Silvia Innocenti                                              |  TBA                                                                                          |  Zoom + ESB 5104
-8-Nov   |  Jérémie Bonneau                                             |  TBA                                                                                           |  Zoom + ESB 5104
+1-Nov   |  Silvia Innocenti                                              |  Analytical and resampling methods for the assessment of tidal harmonic analysis uncertainty                                                                                          |  Zoom + ESB 5104
+8-Nov   |  Jérémie Bonneau                                             |  Parameterization of ice-ocean interactions in ice shelf basal channels                                                                                           |  Zoom + ESB 5104
 15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom + ESB 5104
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom + ESB 5104
 29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom + ESB 5104
