--- a/Fall2021.md
+++ b/Fall2021.md
@@ -10,7 +10,7 @@ Date  |  Speaker                                            |  Title            
 25-Oct   |  Angelica Peña                                            |  Modelling the interannual variability of biogeochemical conditions along the British Columbia coast                                                                                          |  Zoom + ESB 5104
 1-Nov   |  Silvia Innocenti                                              |  Analytical and resampling methods for the assessment of tidal harmonic analysis uncertainty                                                                                          |  Zoom + ESB 5104
 8-Nov   |  Jérémie Bonneau                                             |  Parameterization of ice-ocean interactions in ice shelf basal channels                                                                                           |  Zoom + ESB 5104
-15-Nov   |  Effie Fine                                            |  TBA                                                                                           |  Zoom + ESB 5104
+15-Nov   |  Effie Fine                                            |  The influence of sea ice on internal wave mixing in the Beaufort Sea                                                                                           |  Zoom + ESB 5104
 22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom + ESB 5104
 29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom + ESB 5104
 6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom + ESB 5104
