--- a/Fall2021.md
+++ b/Fall2021.md
@@ -11,7 +11,7 @@ Date  |  Speaker                                            |  Title            
 1-Nov   |  Silvia Innocenti                                              |  Analytical and resampling methods for the assessment of tidal harmonic analysis uncertainty                                                                                          |  Zoom + ESB 5104
 8-Nov   |  Jérémie Bonneau                                             |  Parameterization of ice-ocean interactions in ice shelf basal channels                                                                                           |  Zoom + ESB 5104
 15-Nov   |  Effie Fine                                            |  The influence of sea ice on internal wave mixing in the Beaufort Sea                                                                                           |  Zoom + ESB 5104
-22-Nov   |  Khushboo Jhugroo                                             |  TBA                                                                                           |  Zoom + ESB 5104
+22-Nov   |  Khushboo Jhugroo                                             |  River-induced submesoscale processes in an Aotearoa New Zealand shelf sea                                                                                           |  Zoom + ESB 5104
 29-Nov   |  Lucia Hosekova                                           |  TBA                                                                                            |  Zoom + ESB 5104
 6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom + ESB 5104
 13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom + ESB 5104
