--- a/Fall2021.md
+++ b/Fall2021.md
@@ -13,5 +13,5 @@ Date  |  Speaker                                            |  Title            
 15-Nov   |  Effie Fine                                            |  The influence of sea ice on internal wave mixing in the Beaufort Sea                                                                                           |  Zoom + ESB 5104
 22-Nov   |  Khushboo Jhugroo                                             |  River-induced submesoscale processes in an Aotearoa New Zealand shelf sea                                                                                           |  Zoom + ESB 5104
 29-Nov   |  Lucia Hosekova                                           |  Coastal wave exposure in northern Alaska                                                                                            |  Zoom + ESB 5104
-6-Dec   |  Christine Maker                                             |  TBA                                                                                           |  Zoom + ESB 5104
-13-Dec   | Samuel Brenner                                            |  TBA                                                                                           |  Zoom + ESB 5104
+6-Dec   |  N/A                                            |  No Seminar Today!                                                                                  |  Zoom + ESB 5104
+13-Dec   | Samuel Brenner                                            |  Drivers of seasonal variations of sea ice and ocean surface layer velocities in the Beaufort Sea                                                                                           |  Zoom + ESB 5104
