--- a/Fall2022.md
+++ b/Fall2022.md
@@ -2,9 +2,9 @@ Date  |  Speaker                                            |  Title            
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 31-Aug   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
 7-Sep    | New Student Carnival                          |  new students                                                  |  Zoom & ESB 5104
-14-Sep   | TBA                                           |  presentation about Quadra field school project                |  Zoom & ESB 5104
+14-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 21-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-28-Sep   | TBA                                           |  TBA                                                           |  N/A 
+28-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 5-Oct    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 12-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5108
 29-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
