--- a/Fall2022.md
+++ b/Fall2022.md
@@ -1,6 +1,6 @@
 Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
-31-Aug   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
+31-Aug   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5106
 7-Sep    | New Student Carnival                          |  new students                                                  |  Zoom & ESB 5104
 14-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 21-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
@@ -11,7 +11,7 @@ Date  |  Speaker                                            |  Title            
 26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 2-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 9-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-16-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+16-Nov   | TBA                                           |  TBA                                                           |  Zoom & TBA
 23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
