--- a/Fall2022.md
+++ b/Fall2022.md
@@ -1,16 +1,16 @@
 Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
-31-Aug   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5106
+31-Aug   | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5106
 7-Sep    | New Student Carnival                          |  new students                                                  |  Zoom & ESB 5104
 14-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-21-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-28-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+21-Sep   | Krysten Rutherford                            |  TBA                                                           |  Zoom & ESB 5104
+28-Sep   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
 5-Oct    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 12-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5108
-29-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+19-Oct   | Jennifer Jackson                              |  TBA                                                           |  Zoom & ESB 5104
 26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 2-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-9-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5104
 16-Nov   | TBA                                           |  TBA                                                           |  Zoom & TBA
 23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
