--- a/Fall2022.md
+++ b/Fall2022.md
@@ -1,8 +1,8 @@
 Date  |  Speaker                                            |  Title                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 31-Aug   | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5106
-7-Sep    | New Student Carnival                          |  new students                                                  |  Zoom & ESB 5104
-14-Sep   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+7-Sep    | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5104
+14-Sep   | New Student Carnival                          |  TBA                                                           |  Zoom & ESB 5104
 21-Sep   | Krysten Rutherford                            |  TBA                                                           |  Zoom & ESB 5104
 28-Sep   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
 5-Oct    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
