--- a/Fall2022.md
+++ b/Fall2022.md
@@ -13,7 +13,7 @@ Date  |  Speaker                                            |  Title            
 9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5104
 16-Nov   | TBA                                           |  TBA                                                           |  Zoom & TBA
 23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-30-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 14-Dec   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 21-Dec   | TBA 
