--- a/Fall2022.md
+++ b/Fall2022.md
@@ -11,7 +11,7 @@ Date  |  Speaker                                            |  Title            
 26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 2-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5104
-16-Nov   | TBA                                           |  TBA                                                           |  Zoom & TBA
+16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & TBA
 23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
