--- a/Fall2022.md
+++ b/Fall2022.md
@@ -14,6 +14,6 @@ Date  |  Speaker                                            |  Title            
 16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & TBA
 23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
-7-Dec    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+7-Dec    | Grant Francis                                 |  TBA                                                           |  Zoom & ESB 5104
 14-Dec   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 21-Dec   | TBA 
