--- a/Fall2022.md
+++ b/Fall2022.md
@@ -5,7 +5,7 @@ Date  |  Speaker                                            |  Title            
 14-Sep   | New Student Carnival                          |  TBA                                                           |  Zoom & ESB 5104
 21-Sep   | Krysten Rutherford                            |  TBA                                                           |  Zoom & ESB 5104
 28-Sep   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
-5-Oct    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+5-Oct    | Ed Mason                                      |  TBA                                                           |  Zoom & ESB 5104
 12-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5108
 19-Oct   | Jennifer Jackson                              |  TBA                                                           |  Zoom & ESB 5104
 26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
