--- a/Fall2022.md
+++ b/Fall2022.md
@@ -12,7 +12,7 @@ Date  |  Speaker                                            |  Title            
 2-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
 9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5104
 16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & TBA
-23-Nov   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+23-Nov   | Paul Myers                                    |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | Grant Francis                                 |  TBA                                                           |  Zoom & ESB 5104
 14-Dec   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
