--- a/Fall2022.md
+++ b/Fall2022.md
@@ -3,9 +3,10 @@ Date  |  Speaker                                            |  Title            
 31-Aug   | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5106
 7-Sep    | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5104
 14-Sep   | New Student Carnival                          |  TBA                                                           |  Zoom & ESB 5104
-21-Sep   | Krysten Rutherford                            |  TBA                                                           |  Zoom & ESB 5104
-28-Sep   | Sam Stevens                                   |  TBA                                                           |  Zoom & ESB 5104
-5-Oct    | Ed Mason                                      |  TBA                                                           |  Zoom & ESB 5104
+21-Sep   | Krysten Rutherford                            |  Elucidating transport timescales and pathways: An exploration of modeling studies of Canadian coastal waters.
+                                                           |  Zoom & ESB 5104
+28-Sep   | Sam Stevens                                   |  (mid-depth float project)                                                           |  Zoom & ESB 5104
+5-Oct    | Ed Mason                                      |  (fractal dimention of drifter tracks)                                                           |  Zoom & ESB 5104
 12-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5108
 19-Oct   | Jennifer Jackson                              |  TBA                                                           |  Zoom & ESB 5104
 26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
