--- a/Fall2022.md
+++ b/Fall2022.md
@@ -6,10 +6,10 @@ Date  |  Speaker                                            |  Title            
 21-Sep   | Krysten Rutherford                            |  Elucidating transport timescales and pathways: An exploration of modeling studies of Canadian coastal waters.                                          |  Zoom & ESB 5104
 28-Sep   | Sam Stevens                                   |  Swish floats - designing, testing, and implementing an inexpensive neutrally buoyant float system to track subsurface dispersion in Canadian water. |  Zoom & ESB 5104
 5-Oct    | Ed Mason                                      |  Fractal Analysis of Coastal Drifter Trajectories              |  Zoom & ESB 5104
-12-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-19-Oct   | Jennifer Jackson                              |  TBA                                                           |  Zoom & ESB 5104
-26-Oct   | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
-2-Nov    | TBA                                           |  TBA                                                           |  Zoom & ESB 5104
+12-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
+19-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
+26-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
+2-Nov    | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
 9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5108
 16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & ESB 5108
 23-Nov   | Paul Myers                                    |  TBA                                                           |  Zoom & ESB 5104
