--- a/Fall2022.md
+++ b/Fall2022.md
@@ -10,7 +10,7 @@ Date  |  Speaker                                            |  Title            
 19-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
 26-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
 2-Nov    | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
-9-Nov    | Youran Li                                     |  TBA                                                           |  Zoom & ESB 5108
+9-Nov    | Youran Li                                     |  Estimate meridional internal wave energy fluxes in the Southern Ocean via a high-resolution, eddy and tide resolving simulation                                                           |  Zoom & ESB 5108
 16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & ESB 5108
 23-Nov   | Paul Myers                                    |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
