--- a/Fall2022.md
+++ b/Fall2022.md
@@ -15,5 +15,5 @@ Date  |  Speaker                                            |  Title            
 23-Nov   | Paul Myers                                    |  TBA                                                           |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | Grant Francis                                 |  TBA                                                           |  Zoom & ESB 5104
-14-Dec   | Brandom McNabb                                |  TBA                                                           |  Zoom & ESB 5104
+14-Dec   | Brandom McNabb                                |  Happy Christmas everybody!                                    |  Zoom & ESB 5104
 21-Dec   | No PO Seminar! 
